# trading212-portfolio-compare

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  commons.py  cookie_auth.py  main.py  portfolio.py  pyproject.toml
