[tool.poetry]
name = "t212"
version = "0.1.0"
description = ""
authors = ["Angelo Caldeira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
matplotlib = "^3.9.1.post1"
python-dotenv = "^1.0.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
